--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.6",
+    "tailwindcss": "^4.0.6",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.1"
